<resources>
    <string name="app_name">Washing_machine</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="whites">Λευκά</string>
    <string name="blacks">Σκούρα</string>
    <string name="colors">Χρωματιστά</string>
    <string name="main_menu_title">Κεντρικό Μενού</string>
    <string name="help">help</string>]
    <string name="extra_options_button">Περισσότερες επιλογές</string>
    <string name="temp">Θερμοκρασία</string>
    <string name="rotations">Στροφές</string>
    <string name="total_time">Χρόνος πλύσης</string>
    <string name="start">Έναρξη</string>
    <string name="detergent_dialog">Παρακαλώ προσθέστε το απορρυπαντικό και το μαλλακτικό πριν την έναρξη της πλύσης</string>
    <string name="continue_dialog">Συνέχεια</string>
    <string name="washing_ends">Το πλυντήριο θα τελειώσει σε :</string>
</resources>