<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".temps_fragment">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/temps_text"
            android:text="@string/temp" />

        <ListView
            android:layout_margin="8dp"
            android:padding="8dp"
            android:drawSelectorOnTop="true"
            android:id="@+id/temps_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            style="@style/temps_text"
            android:text="@string/rotations" />

        <ListView
            android:id="@+id/rotations_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="match_parent">

        <TextView
            android:text="@string/total_time"
            style="@style/temps_text" />
        <TextView
            android:background="@drawable/background_shape"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/time_text"/>

    </LinearLayout>

</LinearLayout>