<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:id="@+id/mainMenu"
    android:background="@color/primary"
    android:layout_height="match_parent"
    tools:context=".main_menu">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="12"
            android:id="@+id/main_3_buttons_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/whites_layout"
                style="@style/linear_layouts_main_menu">

                <ImageView
                    style="@style/main_menu_image"
                    android:id="@+id/white_shirt"
                    android:src="@drawable/ic_tshirt_white"
                    android:contentDescription="@string/whites" />

                <View
                    style="@style/Divider.Horizontal"/>

                <TextView
                    style="@style/main_menu_text"
                    android:text="@string/whites" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/blacks_layout"
                style="@style/linear_layouts_main_menu">

                <ImageView
                    android:id="@+id/black_shirt"
                    android:src="@drawable/ic_tshirt_black"
                    style="@style/main_menu_image"
                    />

                <View
                    style="@style/Divider.Horizontal"/>

                <TextView
                    style="@style/main_menu_text"
                    android:text="@string/blacks"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/colors_layout"
                style="@style/linear_layouts_main_menu">

                <ImageView
                    android:id="@+id/color_shirt"
                    android:src="@drawable/colored_tshirt"
                    style="@style/main_menu_image"
                    />

                <View
                    style="@style/Divider.Horizontal"/>

                <TextView
                    style="@style/main_menu_text"
                    android:text="@string/colors"
                    />
            </LinearLayout>


        </LinearLayout>



        <Button
            android:id="@+id/more_options"
            android:backgroundTint="@color/dark_primary"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/extra_options_button"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>


    </LinearLayout>





</LinearLayout>